<?xml version="1.0"?>
<package format="2">
  <name>asv_map</name>
  <version>0.0.0</version>
  <description>The asv_map_service package</description>

  <maintainer email="ole.sivert.otterholm@gmail.com">Ole Sivert</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>rospy</depend>

  <build_depend>asv_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>asv_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>

  </export>
</package>
